--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -7,6 +7,7 @@
   display: flex;
   flex: auto;
   min-height: 0;
+  background-color: #f4f7fa;
 }
 
 .ant-layout-header {
@@ -73,6 +74,7 @@
   background-color: #f7f8fa;
   position: relative;
   padding-top: 12px;
+  box-shadow: inset -1px 0 0 0 #E9EBEE;
 
   .ant-menu {
     background-color: transparent;
@@ -82,6 +84,7 @@
     border-right: 0;
     height: calc(100% - 52px - 12px);
     overflow-y: auto;
+    overflow-x: hidden;
 
     .ant-menu-submenu-title,
     .ant-menu-item {
@@ -150,6 +153,7 @@
 
     .ant-menu-submenu-arrow {
       transform: translateY(1px);
+
       &::after,
       &::before {
         width: 7px;
